syntax = "proto3";

// This is the package where the Java class below is written to.
package org.experimental.protobuf.generated;

// This is the Java class that is generated from the .proto file when executing `protoc`
option java_outer_classname = "ServerMsgProtocols";

/* You can add comments anywhere! */
message ServerMessageHeaderProto {
    // Field indexes in the reserved list can't be used again. Use 'reserved' to mark fields that have been removed. Reusing a
    // previously used field causes a lot of problems.
    reserved 10;
    string intentName = 1;
    string codecName = 2;
    map<string, string> headersValues = 3;
    int32 intentVersion = 4;
}

// todo Need to figure out how to make this function for everything covered by JavaSerializationCodec.
message ServerMessageBodyProto {
    string msgBody = 1;
}

// This is the proto version of a ServerMessage
message ServerMessageProto {
    ServerMessageHeaderProto header = 1;
    bytes body = 2;
}
